Fix for super long photographer caption that is way too descriptive and really should have been shortened but wasn't for some reason and now it's too long so the space the designer intended for it doesn't fit it anymore because it is unnecessarily long

--- a/assets/style.css
+++ b/assets/style.css
@@ -940,7 +940,7 @@ footer .copyright {
 }
 .sidebar-social {
     position: absolute;
-    top: 9px;
+    top: 10px;
     right: 0;
 }
 .sidebar-social a {
@@ -998,11 +998,19 @@ figure {
     font-size: 14px;
     opacity: .5;
     padding-bottom: 10px;
+    display: flex;
+    justify-content: space-between;
+    line-height: 14px;
+    padding-top: 6px;
 }
 .single-article figcaption .photographer {
     float: right;
     text-transform: uppercase;
     font-size: 12px;
+    display: block;
+    max-width: 70%;
+    text-align: right;
+    padding-top: 2px;
 }
 figure img {
     width: 100%;
@@ -1717,6 +1725,8 @@ header {
     font-weight: 300;
     text-transform: uppercase;
     opacity: .4;
+    text-align: right;
+    background-color: #fcf1e7;
 }
 .single-article-premium .premium-article-head > .meta-foto {
     padding: 0px;
